Mise à jour du projet - Ajout et modification des fichiers