@@ -12,21 +12,14 @@ import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.TextField;
 import javafx.util.StringConverter;
-
-import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class RetraitController {
-
-    @FXML
-    private ComboBox<Compte> comboCompte;
-    @FXML
-    private TextField txtMontant;
-    @FXML
-    private Button btnRetrait;
-    @FXML
-    private Button btnRetour;
+    @FXML private ComboBox<Compte> comboCompte;
+    @FXML private TextField txtMontant;
+    @FXML private Button btnRetrait;
+    @FXML private Button btnRetour;
 
     private ICompte compteService = new CompteImpl();
     private ObservableList<Compte> comptesList = FXCollections.observableArrayList();
@@ -37,9 +30,9 @@ public class RetraitController {
         comboCompte.setConverter(new StringConverter<Compte>() {
             @Override
             public String toString(Compte compte) {
-                return compte == null ? "" : String.format("%s - %s %s", compte.getNumero(), compte.getClient().getPrenom(), compte.getClient().getNom());
+                return compte == null ? "" : String.format("%s - %s %s", compte.getNumero(),
+                        compte.getClient().getPrenom(), compte.getClient().getNom());
             }
-
             @Override
             public Compte fromString(String string) {
                 return null;
@@ -49,12 +42,22 @@ public class RetraitController {
 
     private void chargerComptes() {
         List<Compte> allComptes = compteService.getAllComptes();
-        List<Compte> activeAttributedComptes = allComptes.stream()
+        System.out.println("🔍 Nombre de comptes trouvés : " + allComptes.size()); // Log
+
+        List<Compte> comptesActifs = allComptes.stream()
                 .filter(compte -> compte.isActif() && compte.getClient() != null)
-                .collect(Collectors.toList());
-        comptesList.setAll(activeAttributedComptes);
+                .toList();
+
+        if (comptesActifs.isEmpty()) {
+            System.out.println("⚠️ Aucun compte actif trouvé !");
+        } else {
+            comptesActifs.forEach(c -> System.out.println("✅ Compte : " + c.getNumero() + " - Client : " + c.getClient().getNom()));
+        }
+
+        comptesList.setAll(comptesActifs);
         comboCompte.setItems(comptesList);
     }
+
 
     @FXML
     private void effectuerRetrait(ActionEvent event) {
@@ -63,7 +66,6 @@ public class RetraitController {
             Outils.showError("Erreur", "Veuillez sélectionner un compte.");
             return;
         }
-
         double montant;
         try {
             montant = Double.parseDouble(txtMontant.getText());
@@ -71,30 +73,23 @@ public class RetraitController {
             Outils.showError("Erreur", "Veuillez entrer un montant valide.");
             return;
         }
-
         if (compteSelectionne.getBalance() < montant) {
             Outils.showError("Erreur", "Le solde du compte est insuffisant.");
             return;
         }
-
         compteSelectionne.setBalance(compteSelectionne.getBalance() - montant);
         compteService.updateCompte(compteSelectionne);
         Outils.showSuccess("Succès", "Retrait effectué avec succès.");
-
-        // Redirection vers la page de gestion des opérations
-        try {
-            Outils.load(event, "Gestion des Opérations", "/fxml/gestionOperations.fxml");
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        retourGestionOperations(event);
     }
 
     @FXML
     private void retourGestionOperations(ActionEvent event) {
         try {
             Outils.load(event, "Gestion des Opérations", "/fxml/gestionOperations.fxml");
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
+            Outils.showError("Erreur", "Impossible de retourner à la page Gestion des Opérations.");
         }
     }
 }
