@@ -14,23 +14,16 @@ import javafx.scene.control.TextField;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Alert.AlertType;
 import javafx.util.StringConverter;
-
-import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.io.IOException;
 
 public class VirementController {
-
-    @FXML
-    private ComboBox<Compte> comboCompteSource;
-    @FXML
-    private ComboBox<Compte> comboCompteDestinataire;
-    @FXML
-    private TextField txtMontant;
-    @FXML
-    private Button btnVirement;
-    @FXML
-    private Button btnRetour;
+    @FXML private ComboBox<Compte> comboCompteSource;
+    @FXML private ComboBox<Compte> comboCompteDestinataire;
+    @FXML private TextField txtMontant;
+    @FXML private Button btnVirement;
+    @FXML private Button btnRetour;
 
     private ICompte compteService = new CompteImpl();
     private ObservableList<Compte> comptesList = FXCollections.observableArrayList();
@@ -41,21 +34,20 @@ public class VirementController {
         comboCompteSource.setConverter(new StringConverter<Compte>() {
             @Override
             public String toString(Compte compte) {
-                return compte == null ? "" : String.format("%s - %s %s", compte.getNumero(), compte.getClient().getPrenom(), compte.getClient().getNom());
+                return compte == null ? "" : String.format("%s - %s %s", compte.getNumero(),
+                        compte.getClient().getPrenom(), compte.getClient().getNom());
             }
-
             @Override
             public Compte fromString(String string) {
                 return null;
             }
         });
-
         comboCompteDestinataire.setConverter(new StringConverter<Compte>() {
             @Override
             public String toString(Compte compte) {
-                return compte == null ? "" : String.format("%s - %s %s", compte.getNumero(), compte.getClient().getPrenom(), compte.getClient().getNom());
+                return compte == null ? "" : String.format("%s - %s %s", compte.getNumero(),
+                        compte.getClient().getPrenom(), compte.getClient().getNom());
             }
-
             @Override
             public Compte fromString(String string) {
                 return null;
@@ -65,30 +57,37 @@ public class VirementController {
 
     private void chargerComptes() {
         List<Compte> allComptes = compteService.getAllComptes();
-        List<Compte> activeAttributedComptes = allComptes.stream()
+        System.out.println("🔍 Nombre de comptes trouvés : " + allComptes.size()); // Log
+
+        List<Compte> comptesActifs = allComptes.stream()
                 .filter(compte -> compte.isActif() && compte.getClient() != null)
-                .collect(Collectors.toList());
-        comptesList.setAll(activeAttributedComptes);
+                .toList();
+
+        if (comptesActifs.isEmpty()) {
+            System.out.println("⚠️ Aucun compte actif trouvé !");
+        } else {
+            comptesActifs.forEach(c -> System.out.println("✅ Compte : " + c.getNumero() + " - Client : " + c.getClient().getNom()));
+        }
+
+        comptesList.setAll(comptesActifs);
         comboCompteSource.setItems(comptesList);
         comboCompteDestinataire.setItems(comptesList);
     }
+
 
     @FXML
     private void effectuerVirement(ActionEvent event) {
         Compte compteSource = comboCompteSource.getSelectionModel().getSelectedItem();
         Compte compteDestinataire = comboCompteDestinataire.getSelectionModel().getSelectedItem();
         String montantStr = txtMontant.getText();
-
         if (compteSource == null || compteDestinataire == null) {
             Outils.showError("Erreur", "Veuillez sélectionner les comptes source et destinataire.");
             return;
         }
-
         if (montantStr == null || montantStr.isEmpty()) {
             Outils.showError("Erreur", "Veuillez saisir un montant.");
             return;
         }
-
         double montant;
         try {
             montant = Double.parseDouble(montantStr);
@@ -96,7 +95,6 @@ public class VirementController {
             Outils.showError("Erreur", "Le montant saisi n'est pas valide.");
             return;
         }
-
         try {
             compteService.virement(compteSource, compteDestinataire, montant);
             Alert alert = new Alert(AlertType.INFORMATION);
@@ -114,13 +112,14 @@ public class VirementController {
     private void retourGestionOperations(ActionEvent event) {
         try {
             Outils.load(event, "Gestion des Opérations", "/fxml/gestionOperations.fxml");
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
+            Outils.showError("Erreur", "Impossible de retourner à la page Gestion des Opérations.");
         }
     }
 
     @FXML
     private void filtrerComptesDestinataire(ActionEvent event) {
-        // Implement the logic to filter destination accounts if needed
+        // Implémentation éventuelle de la logique de filtrage
     }
 }
